# where-to-run-today

./: .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  daily_check.yml
src/: __main__.py  config.json  config.py  scraper.py
src/where_to_run_today/: main.py  scraper.py
tests/: test_config.py  test_scraper.py
