[project]
name = "where-to-run-today"
version = "0.1.0"
description = "Forest fire risk scraper for Southern France"
authors = [
    { name = "นักมวยโคเดอร์" }
]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "pydantic",
    "freeMobileSMS @ git+https://github.com/nakmuaycoder/freeMobileSMS.git",
    "pre-commit",
    "ruff",
    "detect-secrets",
    "pytest"
]

[project.scripts]
where-to-run-today = "src.__main__:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
